# llvm-project

./: .gitignore  CONTRIBUTING.md  README.md  out.txt  stdpar_sema.patch
.ci/: generate-buildkite-pipeline-premerge
.github/workflows/: issue-subscriber.yml  patch-based-code-coverage.yml  repo-lockdown.yml  sync-release-repo.yml
bolt/runtime/: CMakeLists.txt  instr.cpp  sys_aarch64.h  sys_x86_64.h
bolt/test/: assume-abi.test
clang/: CMakeLists.txt
clang-tools-extra/clang-tidy/: ClangTidy.cpp  ClangTidy.h  ClangTidyCheck.cpp  ClangTidyCheck.h  ClangTidyDiagnosticConsumer.cpp  ClangTidyDiagnosticConsumer.h
clang-tools-extra/clangd/: AST.cpp  AST.h  CMakeLists.txt  ClangdLSPServer.cpp  ClangdServer.cpp  ClangdServer.h  CodeComplete.cpp  CodeCompletionStrings.cpp  CodeCompletionStrings.h  CompileCommands.cpp  Diagnostics.cpp  DumpAST.cpp  FindTarget.cpp  HeuristicResolver.cpp  Hover.cpp  IncludeCleaner.cpp  InlayHints.cpp  ParsedAST.cpp  ParsedAST.h  Preamble.cpp  Protocol.cpp  Protocol.h  Selection.cpp  Selection.h  SemanticSelection.cpp  XRefs.cpp
clang-tools-extra/docs/: ReleaseNotes.rst
clang/docs/: ClangFormatStyleOptions.rst  ClangRepl.rst  ExecutionResultsHandling.rst  HIPSupport.rst  InternalsManual.rst  LanguageExtensions.rst  LibASTMatchersReference.html  OpenMPSupport.rst  ReleaseNotes.rst  StdParSupport.rst  UsersManual.rst  index.rst
clang/test/: lit.cfg.py
clang/unittests/Interpreter/: CMakeLists.txt  CodeCompletionTest.cpp  IncrementalProcessingTest.cpp  InteractiveCudaTest.cpp  InterpreterTest.cpp
clang/utils/: analyze_safe_buffer_debug_notes.py  update_options_td_flags.py
clang/www/: c_status.html  cxx_dr_status.html  cxx_status.html
compiler-rt/: CMakeLists.txt
compiler-rt/cmake/: builtin-config-ix.cmake  config-ix.cmake
flang/: CMakeLists.txt
flang-rt/: CMakeLists.txt
flang-rt/docs/: GettingStarted.md
flang-rt/unittests/: CMakeLists.txt
flang/docs/: OpenACC.md
flang/module/: __ppc_intrinsics.f90
flang/runtime/: CMakeLists.txt  ISO_Fortran_binding.cpp  ISO_Fortran_util.h  allocatable.cpp  assign.cpp  derived-api.cpp  derived.cpp  descriptor-io.h  descriptor.cpp  emit-encoded.h  io-api.cpp  io-stmt.cpp  io-stmt.h  matmul-transpose.cpp  matmul.cpp  misc-intrinsic.cpp  namelist.cpp  numeric.cpp  pointer.cpp  stat.h  temporary-stack.cpp  type-info.cpp  type-info.h  unit-map.cpp
libc/: CMakeLists.txt
libc/benchmarks/: LibcMemoryBenchmark.h
libc/include/: CMakeLists.txt
libc/lib/: CMakeLists.txt
libc/spec/: posix.td  stdc.td
libc/src/assert/: CMakeLists.txt
libc/src/assert/gpu/: __assert_fail.cpp
libc/src/math/gpu/: CMakeLists.txt  acos.cpp  acosf.cpp  acosh.cpp  acoshf.cpp  asin.cpp  asinf.cpp  asinh.cpp  asinhf.cpp  atan.cpp  atan2.cpp  atan2f.cpp  atanf.cpp  atanh.cpp  atanhf.cpp  cos.cpp  cosf.cpp  cosh.cpp  coshf.cpp  erf.cpp  erff.cpp  exp.cpp  exp2.cpp  exp2f.cpp  expf.cpp  expm1.cpp  expm1f.cpp  hypot.cpp  hypotf.cpp  ldexp.cpp  ldexpf.cpp  llroundf.cpp  log.cpp  log10.cpp  log10f.cpp  log1p.cpp  log1pf.cpp  log2.cpp  nextafter.cpp  nextafterf.cpp  (+6 more)
libcxx/: CMakeLists.txt
libcxx/benchmarks/: CMakeLists.txt  ContainerBenchmarks.h  allocation.bench.cpp  deque.bench.cpp  unordered_set_operations.bench.cpp  vector_operations.bench.cpp
libcxx/docs/: BuildingLibcxx.rst  Contributing.rst  FeatureTestMacroTable.rst  Hardening.rst  ImplementationDefinedBehavior.rst  Modules.rst  UsingLibcxx.rst  index.rst
libcxx/include/: CMakeLists.txt  __availability  __bit_reference  __config  __config_site.in  __hash_table  __locale  __std_clang_module  __threading_support  algorithm  bitset  charconv  chrono  cmath  compare  complex  condition_variable  cstdlib  ctgmath  format  forward_list  fstream  generate_module_map.py  generate_std_clang_module_header.py  internal_module_attributes.json.in  ios  iosfwd  istream  list  map  mdspan  memory  module.modulemap.in  new  optional  ostream  print  ranges  regex  sstream  (+11 more)
libcxx/modules/: CMakeLists.txt.in  README.md  std.cppm.in
libcxx/src/: CMakeLists.txt  chrono.cpp  debug.cpp  error_category.cpp  future.cpp  ios.cpp  ios.instantiations.cpp  locale.cpp  memory.cpp  new_handler.cpp  ostream.cpp  random_shuffle.cpp  std_stream.h  system_error.cpp  tz.cpp
libcxx/test/: CMakeLists.txt  lit.local.cfg
libcxx/utils/: adb_run.py  generate_feature_test_macro_components.py  generate_std_clang_module_header.py  generate_std_cppm_in.py  libcxx-lit  run-qemu.sh
libcxxabi/: CMakeLists.txt
libcxxabi/include/: cxxabi.h
libcxxabi/src/: cxa_exception.cpp  cxa_exception_storage.cpp  cxa_guard_impl.h  cxa_personality.cpp  fallback_malloc.cpp  private_typeinfo.cpp  private_typeinfo.h
libcxxabi/test/: CMakeLists.txt  backtrace_test.pass.cpp  catch_null_pointer_to_object_pr64953.pass.cpp  forced_unwind1.pass.cpp  forced_unwind2.pass.cpp  forced_unwind3.pass.cpp  test_exception_storage.pass.cpp  test_exception_storage.threads.pass.cpp
libunwind/: CMakeLists.txt
libunwind/include/: __libunwind_config.h
libunwind/src/: Registers.hpp  Unwind-wasm.c  UnwindCursor.hpp  UnwindRegistersSave.S  config.h
libunwind/test/: CMakeLists.txt  aix_signal_unwind.pass.cpp  aix_signal_unwind.pass.sh.S
lld/COFF/: Chunks.h  InputFiles.cpp  InputFiles.h  Writer.cpp
lld/ELF/: CMakeLists.txt  CallGraphSort.cpp  CallGraphSort.h  Config.h  Driver.cpp  InputFiles.cpp  InputFiles.h  InputSection.cpp  LTO.cpp  Options.td  Relocations.cpp  Relocations.h  SyntheticSections.cpp  SyntheticSections.h  Target.cpp  Target.h  Writer.cpp
lld/MachO/: Driver.cpp  InputFiles.cpp  InputFiles.h  Options.td  SymbolTable.cpp
lld/wasm/: Driver.cpp  Options.td  Writer.cpp
lldb/: CodeOwners.rst
lldb/docs/: .htaccess  conf.py  index.rst  python_api.rst
llvm/: CMakeLists.txt
llvm-libgcc/lib/: gcc_s.ver
llvm/docs/: AMDGPUUsage.rst  BitCodeFormat.rst  (+13 more)
mlir/: CMakeLists.txt
mlir/lib/Dialect/LLVMIR/Transforms/: CMakeLists.txt  LegalizeForExport.cpp  NVVMAttachTarget.cpp  ROCDLAttachTarget.cpp
mlir/lib/Dialect/LLVMIR/Transforms/Utils/: CMakeLists.txt  EnsureDistinctSuccessors.cpp
runtimes/: CMakeLists.txt
(+6724 files in other folders)
